This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-03-12:

- Fixed a regression in the 'printf' built-in, introduced on 2023-05-17,
  where each instance of '\0' or '%Z' in the format operand caused a string
  argument to be incorrectly skipped.

2024-03-10:

- Fixed a longstanding bug where the default terminal width for typeset -L, -R,
  or -Z, if not given, was miscalculated for multibyte or control characters.

- Fixed a crash on redefining an array inherited from the parent environment
  in a subshell.

- Fixed corner case breakage of univese handling in the 'echo' command: it
  broke when used in a namespace block before being used anywhere else, and
  only if _AST_FEATURES was not exported first. The bug caused _AST_FEATURES to
  be incorrectly placed in that namespace. Bug introduced on 2023-06-02.

2024-03-07:

- Fixed a bug that caused some systems to corrupt the display of multibyte
  characters in the command prompt.

2024-03-05:

- Fixed a regression, introduced on 2021-02-07, that made the common AST
  options '--???ESC' and '--???noESC' ineffective for enabling/disabling
  ANSI escape codes for emphasis in the output of --man or --help.
  (Type, e.g., print '--???' for more information about common options.)

- Fixed a rare crash in the 'print' built-in due to the use of uninitialised
  memory while parsing options. Bug introduced in ksh 93u+ 2012-05-31.

- Fixed a 2021-04-14 regression: the 'exec' command (which runs a command
  that replaces the shell process and therefore should only run external
  commands) would run a path-bound built-in if /opt/ast/bin is in PATH.

- Fixed a corner case bug: a ${ shared-state command substitution;} failed to
  capture the standard output of a command that replces the shell via 'exec'.

2024-02-29:
