@@ -33,7 +33,14 @@ esac
 set -o noglob
 
 command=iffe
-version=2023-04-06
+version=2024-03-20
+
+# DEFPATH should be inherited from package(1)
+case $DEFPATH in
+/*)	;;
+*)	echo "$command: DEFPATH not set" >&2
+	exit 1 ;;
+esac
 
 compile() # $cc ...
 {
@@ -106,44 +113,7 @@ pkg() # package
 {
 	case $1 in
 	'')	# Determine default system path, store in $pth.
-		pth=$(
-			PATH=/run/current-system/sw/bin:/usr/xpg7/bin:/usr/xpg6/bin:/usr/xpg4/bin:/bin:/usr/bin:$PATH
-			exec getconf PATH 2>/dev/null
-		)
-		case $pth in
-		'' | [!/]* | *:[!/]* | *: )
-			pth="/bin /usr/bin /sbin /usr/sbin" ;;
-		*:*)	pth=$(echo "$pth" | sed 's/:/ /g') ;;
-		esac
-		# Fix for NixOS. Not all POSIX standard utilities come with the default system,
-		# e.g. 'bc', 'file', 'vi'. The command that NixOS recommends to get missing
-		# utilities, e.g. 'nix-env -iA nixos.bc', installs them in a default profile
-		# directory that is not in $(getconf PATH). So add this path to the standard path.
-		# See: https://github.com/NixOS/nixpkgs/issues/65512
-		if	test -e /etc/NIXOS &&
-			nix_profile_dir=/nix/var/nix/profiles/default/bin &&
-			test -d "$nix_profile_dir"
-		then	case " $pth " in
-			*" $nix_profile_dir "* )
-				# nothing to do
-				;;
-			* )	# insert the default profile directory as the second entry
-				pth=$(
-					set $pth
-					one=$1
-					shift
-					echo "$one $nix_profile_dir${1+ }$@"
-				) ;;
-			esac
-		fi
-		# Fix for AIX. At least as of version 7.1, the system default 'find', 'diff -u' and 'patch' utilities
-		# are broken and/or non-compliant in ways that make them incompatible with POSIX 2018. However, GNU
-		# utilities are commonly installed in /opt/freeware/bin, and under standard names (no g- prefix).
-		if	test -d /opt/freeware/bin
-		then	case $(uname) in
-			AIX )	pth="/opt/freeware/bin $pth" ;;
-			esac
-		fi
+		pth=$(echo "$DEFPATH" | sed 's/:/ /g')
 		return
 		;;
 	'<')	shift
