@@ -8,7 +8,7 @@ setv INSTALLROOT ../../..
 setv PACKAGEROOT ../../../../..
 setv CC cc
 setv AR ${mam_cc_AR} ${mam_cc_AR_ARFLAGS}
-setv mam_cc_FLAGS ${mam_cc_DLL} -D_BLD_ast ${-debug-symbols?1?${mam_cc_DEBUG} -D_BLD_DEBUG?${mam_cc_OPTIMIZE}?}
+setv mam_cc_FLAGS ${mam_cc_TARGET} ${mam_cc_DLL} -D_BLD_ast ${-debug-symbols?1?${mam_cc_DEBUG} -D_BLD_DEBUG?${mam_cc_OPTIMIZE}?}
 setv CCFLAGS
 setv CCLDFLAGS ${-strip-symbols?1?${mam_cc_LD_STRIP}??}
 setv IFFEFLAGS
@@ -4765,6 +4765,7 @@ make install virtual
 					prev include/aso.h
 					prev FEATURE/vmalloc
 					prev ast_common.h
+					prev sig.h
 					prev include/ast.h
 				done
 			done
