@@ -339,47 +339,8 @@ PAGESIZE			POSIX	SC 1 MU		PAGESIZE PAGE_SIZE 4096	cc{
 PAGE_SIZE			POSIX	SC 1 MU		_AST_PAGESIZE
 PASS_MAX			SVID	SC 1 CDLMU	8
 PATH				AST	CS 1 MU		sh{
-	CONF_path=
-	case $CONF_getconf in
-	'')	;;
-	*)	CONF_path=`"$CONF_getconf" PATH` ;;
-	esac
-	case $CONF_path in
-	'' | [!/]* | *:[!/]* | *: )
-		CONF_path=/bin:/usr/bin:/sbin:/usr/sbin ;;
-	esac
-	# Fix for NixOS. Not all POSIX standard utilities come with the default system,
-	# e.g. 'bc', 'file', 'vi'. The command that NixOS recommends to get missing
-	# utilities, e.g. 'nix-env -iA nixos.bc', installs them in a default profile
-	# directory that is not in $(getconf PATH). So add this path to the standard path.
-	# See: https://github.com/NixOS/nixpkgs/issues/65512
-	if	test -e /etc/NIXOS &&
-		nix_profile_dir=/nix/var/nix/profiles/default/bin &&
-		test -d "$nix_profile_dir"
-	then	case ":$CONF_path:" in
-		*:"$nix_profile_dir":* )
-			# nothing to do
-			;;
-		* )	# insert the default profile directory as the second entry
-			CONF_path=`
-				set -f
-				IFS=:
-				set $CONF_path
-				one=$1
-				shift
-				echo "$one:$nix_profile_dir${1+:}$*"
-			` ;;
-		esac
-	fi
-	# Fix for AIX. At least as of version 7.1, the system default 'find', 'diff -u' and 'patch' utilities
-	# are broken and/or non-compliant in ways that make them incompatible with POSIX 2018. However, GNU
-	# utilities are commonly installed in /opt/freeware/bin, and under standard names (no g- prefix).
-	if	test -d /opt/freeware/bin
-	then	case `uname` in
-		AIX )	CONF_path="/opt/freeware/bin:$CONF_path" ;;
-		esac
-	fi
-	echo "\\"$CONF_path\\""
+	# DEFPATH should have been exported from package(1)
+	echo "\\"$DEFPATH\\""
 }
 PATH_MAX			POSIX	PC 1 CDLMUX	MAXPATHLEN 1024
 PBS				POSIX	SC 2 FUW
