@@ -1081,7 +1081,7 @@ utime(const char* path, const struct utimbuf* ut)
  * own BSD-like macros
  */
 
-#if !_lib_bzero
+#if !_lib_bzero && !defined(bzero)
 
 void
 bzero(void* b, size_t n)
